--- a/index.html
+++ b/index.html
@@ -1,31 +1,156 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<title>Project 3 by Niclas Ericsson</title>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<script src="js/jquery.js" type="text/javascript"></script>
 <style>
 
 body {
-  font: 10px sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
-.axis line {
-  stroke: #000;
+img {
+	position: absolute;
+	padding: 5px;
 }
 
-.axis path {
-  fill: none;
-  stroke: #000;
+h1 {
+	text-align: center;
+	color: #999;
+	display: none;
+	margin: 0;
+	font-size: 1.8em;
 }
 
-.axis + .axis g text {
-  display: none;
+h2 {
+	text-align: center;
+	color: #999;
+	display: none;
+	margin: 0;
+	margin-top: 18px;
+	font-size: 1.2em;
+}
+
+a {
+	color: #999;
+	position: fixed;
+    bottom: 0;
+	margin: 8px;
+    width: 100%;
+}
+
+text {
+	font-family: 'Open Sans', sans-serif;
+	fill: #999;
+	text-anchor: middle;
+	display: none;
+}
+
+path {
+	-o-transition:.5s;
+	-ms-transition:.5s;
+	-moz-transition:.5s;
+	-webkit-transition:.5s;
+	transition:.5s;
+}
+
+#energy:hover {
+	fill: #FFD445;
+	-o-transition:.5s;
+	-ms-transition:.5s;
+	-moz-transition:.5s;
+	-webkit-transition:.5s;
+	transition:.5s;
+}
+
+#warmwater:hover {
+	fill: #FF1F24;
+	-o-transition:.5s;
+	-ms-transition:.5s;
+	-moz-transition:.5s;
+	-webkit-transition:.5s;
+	transition:.5s;
+}
+
+#coldwater:hover {
+	fill: #2142FF;
+	-o-transition:.5s;
+	-ms-transition:.5s;
+	-moz-transition:.5s;
+	-webkit-transition:.5s;
+	transition:.5s;
+}
+
+.axisLine {
+	stroke: #999;
+	stroke-width: 1;
+	display: none;	
+}
+
+.energyText {
+	
+}
+
+.warmWaterText {
+	
+}
+
+.coldWaterText {
+	
+}
+
+svg {
+	display: block;
+	margin: auto;
 }
 
 </style>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<img src="fortum-logo.png"/>
+<script src="js/d3.js"></script>
 <script>
 
-var formatDate = d3.time.format("%a"),
-    formatDay = function(d) { return formatDate(new Date(2014, 0, d)); };
+function showDetails(text){
+	$(".axisLine").fadeIn();
+	$(".textUp").fadeIn();
+	$(".textDown").fadeIn();
+	$(".textLeft").fadeIn();
+	$(".textRight").fadeIn();
+	$("h1").fadeIn();
+	$("h2").fadeIn();
+	
+	if(text == "energy"){
+		document.getElementById('infoTextLabel').textContent='Electricity';
+		$("#infoTextLabel").fadeIn();
+	}
+	if(text == "coldwater"){
+		document.getElementById('infoTextLabel').textContent='Cold water';
+		$("#infoTextLabel").fadeIn();
+	}
+	if(text == "warmwater"){
+		document.getElementById('infoTextLabel').textContent='Hot water';
+		$("#infoTextLabel").fadeIn();
+	}
+	
+	var count = 5;
+	var counter = setInterval(countdownTimer, 1000);
+
+	function countdownTimer() {
+		count = count - 1;
+		if (count <= 0) {
+			clearInterval(counter);
+			$(".axisLine").fadeOut();
+			$("text").fadeOut();
+			$("h1").fadeOut();
+			$("h2").fadeOut();
+			$("#infoTextLabel").fadeOut();		
+			return;
+		}
+	}
+}
+
+var formatDate = d3.time.format("%H"),
+    formatDay = function(d) { return formatDate(new Date(2015, 0, d)); };
 
 var width = 960,
     height = 500,
@@ -37,8 +162,6 @@ var angle = d3.time.scale()
 
 var radius = d3.scale.linear()
     .range([innerRadius, outerRadius]);
-
-var z = d3.scale.category20c();
 
 var stack = d3.layout.stack()
     .offset("zero")
@@ -63,36 +186,137 @@ var area = d3.svg.area.radial()
 var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height)
+	.attr("id", "svg-canvas")
   .append("g")
     .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
-d3.csv("data.csv", type, function(error, data) {
-  var layers = stack(nest.entries(data));
+d3.csv("data/data.csv", type, function(error, data) {
 
-  // Extend the domain slightly to match the range of [0, 2π].
-  angle.domain([0, d3.max(data, function(d) { return d.time + 1; })]);
-  radius.domain([0, d3.max(data, function(d) { return d.y0 + d.y; })]);
+	var n = 0;
+	data.forEach(function(d) {
+		if(data[n].key == "warmwater" || data[n].key == "coldwater"){
+			data[n].value = data[n].value*8;
+		}
+		n++;
+	});
 
-  svg.selectAll(".layer")
-      .data(layers)
-    .enter().append("path")
-      .attr("class", "layer")
-      .attr("d", function(d) { return area(d.values); })
-      .style("fill", function(d, i) { return z(i); });
+	var layers = stack(nest.entries(data));
 
-  /*svg.selectAll(".axis")
-      .data(d3.range(angle.domain()[1]))
-    .enter().append("g")
-      .attr("class", "axis")
-      .attr("transform", function(d) { return "rotate(" + angle(d) * 180 / Math.PI + ")"; })
-    .call(d3.svg.axis()
-      .scale(radius.copy().range([-innerRadius, -outerRadius]))
-      .orient("left"))
-    .append("text")
-      .attr("y", -innerRadius + 6)
-      .attr("dy", ".71em")
-      .attr("text-anchor", "middle")
-      .text(function(d) { return formatDay(d); });*/
+	  angle.domain([0, d3.max(data, function(d) { return d.time + 1; })]);
+	  radius.domain([0, d3.max(data, function(d) { return d.y0 + d.y; })]);
+		  
+	  svg.selectAll(".layer")
+		  .data(layers)
+		.enter().append("path")
+		  .attr("class", "layer")
+		  .attr("d", function(d) { return area(d.values); })
+		 
+		document.getElementsByTagName("path")[2].setAttribute("fill", "#FCDEA9"); // Energy
+		document.getElementsByTagName("path")[2].setAttribute("id", "energy");
+		
+		document.getElementsByTagName("path")[0].setAttribute("fill", "#FE8588"); // Warm water
+		document.getElementsByTagName("path")[0].setAttribute("id", "warmwater");
+		
+		document.getElementsByTagName("path")[1].setAttribute("fill", "#8C9DFF"); // Cold water
+		document.getElementsByTagName("path")[1].setAttribute("id", "coldwater");
+		
+		var svgCanvas = document.getElementById("svg-canvas");
+		
+		var yAxisUp = document.createElementNS('http://www.w3.org/2000/svg', 'line');
+		yAxisUp.setAttribute('class', "axisLine");
+		yAxisUp.setAttribute('x1', 480);
+		yAxisUp.setAttribute('y1', 135);
+		yAxisUp.setAttribute('x2', 480);
+		yAxisUp.setAttribute('y2', 150);
+		
+		var yAxisDown = document.createElementNS('http://www.w3.org/2000/svg', 'line');
+		yAxisDown.setAttribute('class', "axisLine");
+		yAxisDown.setAttribute('x1', 480);
+		yAxisDown.setAttribute('y1', 350);
+		yAxisDown.setAttribute('x2', 480);
+		yAxisDown.setAttribute('y2', 365);
+		
+		// feldöpta, fixa
+		
+		var xAxisLeft = document.createElementNS('http://www.w3.org/2000/svg', 'line');
+		xAxisLeft.setAttribute('class', "axisLine");
+		xAxisLeft.setAttribute('x1', 580);
+		xAxisLeft.setAttribute('y1', 250);
+		xAxisLeft.setAttribute('x2', 595);
+		xAxisLeft.setAttribute('y2', 250);
+		
+		var xAxisRight = document.createElementNS('http://www.w3.org/2000/svg', 'line');
+		xAxisRight.setAttribute('class', "axisLine");
+		xAxisRight.setAttribute('x1', 365);
+		xAxisRight.setAttribute('y1', 250);
+		xAxisRight.setAttribute('x2', 380);
+		xAxisRight.setAttribute('y2', 250);
+		
+		svgCanvas.appendChild(yAxisUp);
+		svgCanvas.appendChild(yAxisDown);
+		svgCanvas.appendChild(xAxisLeft);
+		svgCanvas.appendChild(xAxisRight);
+		
+		//$("path").attr("onmouseover", "showDetails()");
+		
+		$("#energy").attr("onmouseover", "showDetails('energy')");
+		$("#coldwater").attr("onmouseover", "showDetails('coldwater')");
+		$("#warmwater").attr("onmouseover", "showDetails('warmwater')");
+		
+		// Text up
+		
+		var newText = document.createElementNS("http://www.w3.org/2000/svg","text");
+		newText.setAttribute("class", "textUp");
+		newText.setAttributeNS(null,"x",480);     
+		newText.setAttributeNS(null,"y",165); 
+		newText.setAttributeNS(null,"font-size","11");
+		var textNode = document.createTextNode("12am");
+		newText.appendChild(textNode);
+		svgCanvas.appendChild(newText);
+		
+		// Text right
+		
+		var newText = document.createElementNS("http://www.w3.org/2000/svg","text");
+		newText.setAttribute("class", "textRight");
+		newText.setAttributeNS(null,"x",565);     
+		newText.setAttributeNS(null,"y",253); 
+		newText.setAttributeNS(null,"font-size","11");
+		var textNode = document.createTextNode("6am");
+		newText.appendChild(textNode);
+		svgCanvas.appendChild(newText);
+		
+		// Text down
+		
+		var newText = document.createElementNS("http://www.w3.org/2000/svg","text");
+		newText.setAttribute("class", "textDown");
+		newText.setAttributeNS(null,"x",480);     
+		newText.setAttributeNS(null,"y",340); 
+		newText.setAttributeNS(null,"font-size","11");
+		var textNode = document.createTextNode("12pm");
+		newText.appendChild(textNode);
+		svgCanvas.appendChild(newText);
+		
+		// Text left
+		
+		var newText = document.createElementNS("http://www.w3.org/2000/svg","text");
+		newText.setAttribute("class", "textLeft");
+		newText.setAttributeNS(null,"x",395);     
+		newText.setAttributeNS(null,"y",253); 
+		newText.setAttributeNS(null,"font-size","11");
+		var textNode = document.createTextNode("6pm");
+		newText.appendChild(textNode);
+		svgCanvas.appendChild(newText);
+		
+		// Info text
+		
+		var energyText = document.createElementNS("http://www.w3.org/2000/svg","text");
+		energyText.setAttribute("class", "energyText");
+		energyText.setAttribute("id", "infoTextLabel");
+		energyText.setAttributeNS(null,"x",480);     
+		energyText.setAttributeNS(null,"y",250); 
+		energyText.setAttributeNS(null,"font-size","14");
+		energyText.textContent = "";
+		svgCanvas.appendChild(energyText);
 });
 
 function type(d) {
@@ -100,5 +324,8 @@ function type(d) {
   d.value = +d.value;
   return d;
 }
-
 </script>
+<h2>June 20, 2014</h1>
+<h1>Friday</h2>
+<a href="details.html">Project information</a>
+</body>
